subset_split/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-dev
  namespace: dev
  labels:
    name: rollouts-dev
    type: rollout
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: rollouts-dev
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: rollouts-vs
            routes:
              - primary
          destinationRule:
            name: rollout-destrule
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
        - setWeight: 20
        - pause: { duration: 10s }
        - setWeight: 40
        - pause: { duration: 10s }
        - setWeight: 50
        # - pause: { duration: 10s }
        - pause: {}
  template:
    metadata:
      labels:
        name: rollouts-dev
        type: pod
    spec:
      containers:
        - name: rollouts-dev
          image: helloworld:0.0.2
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 20Mi
              cpu: 2m
