subset_split/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollout-destrule
  namespace: dev
  labels:
    name: rollouts-destrule
    type: destinationrule
spec:
  host: rollouts-svc.dev.svc.cluster.local
  subsets:
    - name: canary
      labels:
        rollout: canary
    - name: stable
      labels:
        rollout: stable
