subset_split/vs_stable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-vs
  namespace: dev
  labels:
    name: rollouts-vs
    type: virtualservice
spec:
  gateways:
    - rollouts-gateway
  hosts:
    - "*"
  http:
    - name: primary
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rollouts-svc.dev.svc.cluster.local
            subset: stable
          weight: 100
        - destination:
            host: rollouts-svc.dev.svc.cluster.local
            subset: canary
          weight: 0
